# stepwise_regression

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  file.txt  file1.txt  file2.txt  file3.txt  main  main.c  main.html  main.md
data/: M_Atm_Nc.txt  M_Atm_Nc_t.txt  M_Ext.txt  M_Ext_t.txt  M_Oce_Er.txt  M_Oce_Er_t.txt  r1601  result.txt
linear/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linear.c  linear.h
mean_module/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mean_module.c  mean_module.h  mean_module.html  mean_module.md
step/: CMakeLists.txt  Makefile  cmake_install.cmake  sort.c  sort.h  step.c  step.h  step.html  step.md
test/: CMakeLists.txt  Makefile  test.c  test.h  test.html  test.md
