cmake_minimum_required(VERSION 3.8)
project(main)
include_directories(./ ./mean ./linear ./step)
aux_source_directory(. DIRSRCS)
add_subdirectory(mean_module)
add_subdirectory(linear)
add_subdirectory(step)
link_libraries(m)
add_executable(main ${DIRSRCS})
target_link_libraries(main linear mean_module step)
