cmake_minimum_required(VERSION 3.8)
project(main)
include_directories(./ ./mean ./linear ./step)
aux_source_directory(. DIRSRCS)
add_subdirectory(mean_module)
add_subdirectory(step)
add_subdirectory(linear)
link_libraries(mean_module)
link_libraries(step)
link_libraries(linear)
add_executable(main ${DIRSRCS})
target_link_libraries(main mean_module step linear)
